2003-05-07  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-setup-1): Setup alternative email before
	generate-headers.
	
	(message-forward-subject-name-subject): Fix the case when the
	field "from" doesn't exist.

2003-05-07  Dave Love  <fx@gnu.org>

	* rfc2047.el (rfc2047-encode-region): Skip \n as whitespace.

	* mm-util.el (mm-find-mime-charset-region): Expurgate utf-16 from
	possible values.

2003-05-07  Jesper Harder  <harder@ifa.au.dk>

	* message.el (message-kill-to-signature): Fix.

2003-05-06  Jesper Harder  <harder@ifa.au.dk>

	* gnus-sum.el (gnus-auto-goto-ignores): Docstring fix.

	* gnus-art.el (gnus-mime-display-multipart-as-mixed)
	(gnus-mime-display-multipart-related-as-mixed)
	(gnus-button-mid-or-mail-heuristic-alist): do.

2003-05-05  Dave Love  <fx@gnu.org>

	* mm-util.el (mm-default-multibyte-p): New.
	(mm-coding-system-p): Maybe use find-coding-systems.

2003-05-04  Dave Love  <fx@gnu.org>

	* rfc2047.el (with-syntax-table): Define if necessary.
	(rfc2047-syntax-table): Fix last change for XEmacs.
	(rfc2047-parse-and-decode): Revert last change.

2003-05-03  Jesper Harder  <harder@ifa.au.dk>

	* gnus.el: Don't test for `mm-guess-mime-charset'.

	* mm-util.el (mm-guess-mime-charset): Remove.  Not used any more.

	* gnus.el (gnus-default-charset): Set default value to
	`undecided'.

	* gnus-art.el (article-decode-charset): Don't supply 4th arg to
	mm-decode-body.

	* mm-bodies.el (mm-decode-coding-region-safely): Remove.
	(mm-decode-body): Don't use mm-decode-coding-region-safely.

2003-05-03  Vasily Korytov <deskpot@despammed.com>  (tiny change)

	* gnus-util.el (gnus-multiple-choice): Add ", ?".

2003-05-03  Dave Love  <fx@gnu.org>

	* rfc2047.el (rfc2047-syntax-table): Don't call make-char-table
	with 2 args.
	(rfc2047-decode-string): Don't set the buffer multibyte before
	calling buffer-string.

	* mm-encode.el (mm-long-lines-p): Autoload.
	(mm-encode-content-transfer-encoding): Doc fix.  Don't make buffer