@@ -1,3 +1,14 @@
+2003-05-08  Jesper Harder  <harder@ifa.au.dk>
+
+	* rfc2231.el (rfc2231-parse-string): "=" should have whitespace
+	syntax here.
+
+	* ietf-drums.el (ietf-drums-syntax-table): "=" should not have
+	whitespace syntax class when parsing email addresses.
+
+	* message.el (message-forward-subject-name-subject): Don't use
+	mail-decode-encoded-word-string before parsing from.
+
 2003-05-07  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
 	* message.el (message-setup-1): Setup alternative email before
